--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ FLAGS=-Wall -Wextra -Werror -std=c++17
 all: clean gauss
 
 gauss:
-	g++ main_debug.cpp SLE/modelGauss.cpp SLE/SLEAlgorithm.cpp SLE/Matrix.cpp -o my
+	g++ main_debug.cpp SLE/SLEAlgorithm.cpp SLE/Matrix.cpp -o my
 	./my
 
 clean:
